[gd_scene load_steps=16 format=3 uid="uid://def084pgk5uba"]

[ext_resource type="Texture2D" uid="uid://cvkoqbmi51ma0" path="res://assets/Sprites/Skeleton.png" id="1_5t5p6"]
[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_78pud"]
[ext_resource type="PackedScene" uid="uid://cxvof3ef3d7f" path="res://scenes/velocity_component.tscn" id="2_fdrnq"]
[ext_resource type="PackedScene" uid="uid://cqf3hon38ngj2" path="res://scenes/enemy_radar_component.tscn" id="2_q43ln"]
[ext_resource type="PackedScene" uid="uid://btt6snnj05le0" path="res://scenes/health_component.tscn" id="4_43i5a"]
[ext_resource type="PackedScene" uid="uid://d4immjrrh5iwh" path="res://scenes/death_component.tscn" id="4_rrgge"]
[ext_resource type="PackedScene" uid="uid://c87172ansg6ek" path="res://scenes/hurt_component.tscn" id="5_a16tx"]
[ext_resource type="PackedScene" uid="uid://b70guts2lyo25" path="res://scenes/bone_controller.tscn" id="5_ksglh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8lqg4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mumq5"]
radius = 160.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cmg0q"]
radius = 8.0

[sub_resource type="Animation" id="Animation_6uh3m"]
resource_name = "Idle"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 2.92817),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_sas55"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n1edv"]
resource_name = "Run"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ef75m"]
_data = {
"Idle": SubResource("Animation_6uh3m"),
"RESET": SubResource("Animation_sas55"),
"Run": SubResource("Animation_n1edv")
}

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_78pud")

[node name="VelocityComponent" parent="." instance=ExtResource("2_fdrnq")]
max_speed = 15
acceleration = 10.0

[node name="BoneController" parent="." instance=ExtResource("5_ksglh")]

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_rrgge")]
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("4_43i5a")]
max_health = 1

[node name="HurtComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_a16tx")]
health_component = NodePath("../HealthComponent")
character_type = Array[int]([2])

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
shape = SubResource("CircleShape2D_8lqg4")

[node name="EnemyRadarComponent" parent="." instance=ExtResource("2_q43ln")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyRadarComponent"]
shape = SubResource("CircleShape2D_mumq5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5t5p6")
hframes = 4
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cmg0q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ef75m")
}

[connection signal="body_exited" from="EnemyRadarComponent" to="." method="_on_enemy_radar_component_body_exited"]
